--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-Flask==2.3.3
-gunicorn==21.2.0
-pandas==2.0.3
-numpy==1.24.3
-scikit-learn==1.3.2
+Flask==2.0.3
+gunicorn==20.1.0
+pandas==1.5.3
+numpy==1.23.5
+scikit-learn==1.1.3
+setuptools==65.5.0
