--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-Flask==2.0.3
-gunicorn==20.1.0
-pandas==1.5.3
-numpy==1.23.5
-scikit-learn==1.1.3
-setuptools==65.5.0
+Flask
+gunicorn
+pandas
+numpy
+scikit-learn
+setuptools
